# steam-game-recommender

./: .env.example  .gitignore  Dockerfile  README.md  config.toml  nixpacks.toml  pyproject.toml  requirements.txt
docs/: gemini.md
scripts/: start_server.bat
src/: database.py  hltb_client.py  main.py  recommender.py  steam_client.py  system_prompt.txt
src/templates/: home.html
